gcc/testsuite/gm2/errors/fail/testproc.mod
MODULE testproc ;


VAR
   p: PROC ;
   c: CARDINAL ;
BEGIN
   c := p + 'z'
END testproc.